darken progress, fixed bodymap legs svg spacing

--- a/public/ng/app/scss/partials/_advice.scss
+++ b/public/ng/app/scss/partials/_advice.scss
@@ -231,6 +231,7 @@
 
       p {
         margin: 7px 15px;
+        text-align: left;
       }
 
       .audio-block {
